Added Checking Substrate Health Router
