# src/routes/ping.ts
@@ -3,14 +3,27 @@ import { compareHashedPassword, createHashedPassword } from '~/middlewares/auth'
 import multer from 'multer'
 import { decode } from 'base64-arraybuffer'
 import supabaseClient from '~/configs/supabase'
+import WalletService from '~/services/wallet.service'
 
 const router = Router()
 
 const storage = multer.memoryStorage()
 const upload = multer({ storage: storage })
 
+const walletService = WalletService.getInstance()
+
 router.get('/', async (req: Request, res: Response) => {
   res.send('Hello World!')
+})
+
+router.get('/healer-network', async (req: Request, res: Response) => {
+  try {
+    const { status, message } = await walletService.checkConnection()
+    res.status(200).json({ status, message })
+  } catch (error) {
+    console.error('Error checking connection:', error)
+    res.status(500).json({ status: 'error', message: 'Failed to connect to crypto library.' })
+  }
 })
 
 router.post(
